<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="load_app">LoadApp</string>
    <string name="detail_activity">DetailActivity</string>
    <string name="purple_download_icon">Purple Download Icon</string>
    <string name="glide_image_loading_library_by_bumptech">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_current_repository_by_udacity">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_type_safe_http_client_for_android_and_java_by_square_inc">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download">Download</string>
    <string name="we_are_loading">We are loading…</string>

    <string name="download_notification_channel_id" translatable="false">download_channel</string>'
    <string name="download_notification_channel_name" translatable="true">Download</string>
    <string name="download_notification_channel_description" translatable="true">Download Completed</string>

    <string name="permission_required">Notification access is required to receive timer notifications.</string>
    <string name="ok">OK</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="fail">Fail</string>
    <string name="success">Success</string>
    <string name="button_that_can_be_tapped_to_download_the_repository_of_choice">Tap to download the repository of choice.</string>
</resources>
