<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/detail_activity"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/detail_activity_padding_top"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/file_name_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="@dimen/zero_margin"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="32dp"
                    android:text="@string/file_name"
                    android:theme="@style/DetailActivityLabelName" />

                <TextView
                    android:id="@+id/file_name_value"
                    android:layout_width="@dimen/zero_margin"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="32dp"
                    android:theme="@style/DetailActivityRepoName"
                    tools:text="Repository Name" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/status_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/file_name_linear_layout">

                <TextView
                    android:layout_width="@dimen/zero_margin"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="32dp"
                    android:text="@string/status"
                    android:theme="@style/DetailActivityLabelName" />

                <TextView
                    android:id="@+id/download_status_value"
                    android:layout_width="@dimen/zero_margin"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="32dp"
                    android:theme="@style/DetailActivityRepoName"
                    tools:text="Repository Name" />

            </LinearLayout>

            <Button
                android:id="@+id/ok_button"
                android:layout_width="@dimen/zero_margin"
                android:layout_height="@dimen/loading_button_height"
                android:layout_margin="@dimen/loading_button_margin"
                android:text="@string/ok"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/file_name_linear_layout"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>